fix: no horizontal scroll when mobile menu is hidden

--- a/style.css
+++ b/style.css
@@ -173,10 +173,11 @@ img {
   font-family: 'Aleo', serif;
 }
 
+/*
 .steps-wrap > div:nth-child(2) {
-  /* margin-left: 7rem; */
-  /*  Если включить, то на 1440px будет как по макету, но выглядит не по центру */
-}
+  margin-left: 7rem;
+} */
+/*  Если включить, то на 1440px будет как по макету, но выглядит не по центру */
 
 
 
