--- a/style_mobile_first.css
+++ b/style_mobile_first.css
@@ -33,7 +33,16 @@ body {
 }
 
 img {
-  /* max-width: 100%; */
+  max-width: 100%;
+}
+
+.body--nav-mobile-active::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background:rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
 }
 
 .header {
@@ -41,6 +50,7 @@ img {
   justify-content: space-between;
   align-items: center;
   padding: 2.8em 1.5em 0 1em;
+  /* position: fixed; */
 }
 
 /* ---------- ELEMENTS ---------- */
@@ -79,6 +89,13 @@ img {
   border-radius: 0.6em;
   background: #F2785C;
   box-shadow: 0px 4px 3px rgba(13, 96, 111, 0.25);
+  transition: 0.2s;
+  transform: scale(0, 1);
+  transform-origin: top right;
+}
+
+.nav-mobile--open {
+  transform: scale(1);
 }
 
 
